@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(lib/musicbrainz.cpp)
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(libmusicbrainz, 2.1.0-test1)
+AM_INIT_AUTOMAKE(libmusicbrainz, 2.1.0)
 
 AM_MAINTAINER_MODE
 
